# actiontry

./: CHANGELOG  LICENSE  README.md  pyproject.toml
.github/workflows/: appimage.yml  build.yml  workflow2.yml  workflowmulti  workflowmulti.yml  workflowmultios.yml  workflowwindows.yml
src/hellopyqt/: app.py
