[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "hellopyqt"
bundle = "com.example"
version = "0.1.2"
url = "https://example.com/hellopyqt"
license = "BSD license"
author = 'xyz Developer'
author_email = "zyz@example.com"

[tool.briefcase.app.hellopyqt]
formal_name = "hellopyqt"
description = "simple hello world "
long_description = """A simple python + qt Hello World application which is packaged using briefcase """
icon = "src/hellopyqt/resources/hellopyqt"
sources = ['src/hellopyqt']
requires = [
    "PySide2~=5.15",]

[tool.briefcase.app.hellopyqt.macOS]
requires = []

[tool.briefcase.app.hellopyqt.linux]
requires = []
system_requires = []

[tool.briefcase.app.hellopyqt.windows]
requires = []

# Mobile deployments
[tool.briefcase.app.hellopyqt.iOS]
requires = []

[tool.briefcase.app.hellopyqt.android]
requires = []
